--- a/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
+++ b/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
@@ -1,9 +1,7 @@
 <!-- Portinari gallery -->
 <div class="gallery">
-  <video class="vicalvideo video-js vjs-default-skin vjs-big-play-centered"
-      width="640px"
+  <video
       height="354px"
-      data-setup='{"aspectRatio":"640:354","liveui": true, "responsive": false}'
       preload="none" controls
       poster='/images/portinari/tree_poster.jpg'>
       <source src='/images/portinari/tree.mp4' type="video/mp4" />
@@ -12,6 +10,7 @@
   <img src="/images/portinari/thumb.jpg" alt="Showcase" />
 
   <video
+    height="800px"
     preload="none" controls
     poster='/images/portinari/user_poster.jpg'>
     <source src='/images/portinari/user.mp4' type='video/mp4' />
@@ -22,7 +21,6 @@
       <div class="marvel-device ipad silver landscape">
           <div class="camera"></div>
           <div class="screen">
-              <!-- Content goes here -->
             <img src="/images/portinari/screen.png" alt="Vector drawing app" />
           </div>
           <div class="home"></div>
