--- a/web/src/styles/_colorscheme.scss
+++ b/web/src/styles/_colorscheme.scss
@@ -1,9 +1,9 @@
 :root {
-  --brand-hue: 15;
-  --brand-saturation: 96%;
-  --brand-lightness: 63%;
+  --brand-hue:15;
+  --brand-saturation:96%;
+  --brand-lightness:63%;
 
-  --nice: #fedfce;
+  --nice: hsl(21 96% 90%);
   /* light hsl(15 96% 83%) */
   --brand-light: hsl(var(--brand-hue) var(--brand-saturation) var(--brand-lightness));
   --brand2-light: hsl(153 33% 32%);
@@ -30,7 +30,7 @@
   --surface-shadow-dark: var(--brand-hue) 50% 3%;
   --shadow-strength-dark: 0.8;
 
-  /* dim */
+  /* dim hsl(15 76% 50%) */
   --brand-dim: hsl(var(--brand-hue) calc(var(--brand-saturation) / 1.25) calc(var(--brand-lightness) / 1.25));
   --text1-dim: hsl(var(--brand-hue) 15% 75%);
   --text2-dim: hsl(var(--brand-hue) 10% 61%);
