Final touches for desktop

--- a/web/src/components/RubberBall/RubberBall.module.scss
+++ b/web/src/components/RubberBall/RubberBall.module.scss
@@ -3,9 +3,9 @@
   height: 100vh;
   position: fixed;
   contain: paint;
+  isolation: isolate;
   top: 0;
   left: 0;
   overflow: hidden;
   pointer-events: none;
-  mix-blend-mode: exclusion;
 }
