Feat: Implemented responsive Ipad13 mockup

--- a/web/src/layouts/Project/Project2Column.astro
+++ b/web/src/layouts/Project/Project2Column.astro
@@ -5,6 +5,8 @@ import {readFileSync} from 'node:fs';
 import {toPage} from '../../lib/page/Page'
 import Project from './Project.astro'
 
+import IpadMockup from '../../components/mockups/tablet/IpadPro13.tsx';
+
 /** @ts-ignore */
 const abspath = import.meta.url.pathname;
 const astroContextSymbol = Symbol.for('astro.context');
