Deprecate videojs postprocessor

--- a/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
+++ b/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
@@ -1,7 +1,8 @@
 <!-- Portinari gallery -->
 <div class="gallery">
   <video
-      height="354px"
+      width="733"
+      height="414"
       preload="none" controls
       poster='/images/portinari/tree_poster.jpg'>
       <source src='/images/portinari/tree.mp4' type="video/mp4" />
