--- a/web/src/layouts/Project/Project2Column.astro
+++ b/web/src/layouts/Project/Project2Column.astro
@@ -3,9 +3,10 @@ import {resolve, relative, dirname } from 'node:path'
 import {readFileSync} from 'node:fs';
 
 import {toPage} from '../../lib/page/Page'
-import applyPostProcess from './postprocessors';
 import Project from './Project.astro'
 
+// import applyPostProcess from './postprocessors';
+import MarkdownComponentsHydration from '../../components/MarkdownComponentsHydration/MarkdownComponentsHydration.tsx';
 
 /** @ts-ignore */
 const abspath = import.meta.url.pathname;
@@ -18,7 +19,8 @@ const page = toPage({
   [astroContextSymbol]: astroContext
 });
 
-let contentHtml = applyPostProcess(page.content.content);
+// let contentHtml = applyPostProcess(page.content.content);
+let contentHtml = page.content.content;
 
 /** If we have a gallery file, load it's html */
 const galleryAddress = page.content.gallery;
@@ -29,7 +31,7 @@ if(galleryAddress) {
   const galleryAddressRelativePath = relative(dirname(import.meta.url.pathname), galleryAddressFullPath );
 
   galleryHTML = readFileSync(galleryAddressFullPath).toString();
-  galleryHTML = applyPostProcess(galleryHTML);
+  // galleryHTML = applyPostProcess(galleryHTML);
 }
 
 ---
@@ -40,7 +42,9 @@ if(galleryAddress) {
       {contentHtml}
     </section>
     <aside class="showcase right">
-      {galleryHTML}
+      <!-- <MarkdownComponentsHydration client:idle> -->
+        {galleryHTML}
+      <!-- </MarkdownComponentsHydration> -->
     </aside>
   </div>
 </Project>
