Feat: Video poster should be the same size from SSR and after hydration

--- a/web/src/components/video/video.scss
+++ b/web/src/components/video/video.scss
@@ -11,7 +11,7 @@
 }
 
 .vicalvideo.video-js .vjs-poster {
-  background-size: 150%;
+ background-size: cover;
 }
 
 .vicalvideo.video-js .vjs-control-bar {
