--- a/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
+++ b/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
@@ -1,18 +1,19 @@
 <!-- Portinari gallery -->
 <div class="gallery">
-  <video
-      width="733"
-      height="414"
-      preload="none" controls
-      poster='/images/portinari/tree_poster.jpg'>
-      <source src='/images/portinari/tree.mp4' type="video/mp4" />
-  </video>
+    <video
+        width="733"
+        height="414"
+        preload="none"
+        controls
+        poster='/images/portinari/tree_poster.jpg'>
+        <source src='/images/portinari/tree.mp4' type="video/mp4" />
+    </video>
 
   <img src="/images/portinari/thumb.jpg" alt="Showcase" />
 
   <video
-    height="800px"
-    preload="none" controls
+    height="800"
+    preload="none"
     poster='/images/portinari/user_poster.jpg'>
     <source src='/images/portinari/user.mp4' type='video/mp4' />
   </video>
