--- a/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
+++ b/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
@@ -1,13 +1,13 @@
 <!-- Portinari gallery -->
 <div class="gallery">
-    <video
-        width="733"
-        height="414"
-        preload="none"
-        controls
-        poster='/images/portinari/tree_poster.jpg'>
-        <source src='/images/portinari/tree.mp4' type="video/mp4" />
-    </video>
+  <video
+      width="733"
+      height="414"
+      preload="none"
+      controls
+      poster='/images/portinari/tree_poster.jpg'>
+      <source src='/images/portinari/tree.mp4' type="video/mp4" />
+  </video>
 
   <img src="/images/portinari/thumb.jpg" alt="Showcase" />
 
@@ -20,12 +20,8 @@
 
   <div class="page h50">
     <div class="mockup">
-      <div class="marvel-device ipad silver landscape">
-          <div class="camera"></div>
-          <div class="screen">
-            <img src="/images/portinari/screen.png" alt="Vector drawing app" />
-          </div>
-          <div class="home"></div>
+      <div is="ipadMockup">
+        <img src="/images/portinari/screen.png" alt="Vector drawing app running on IPad" />
       </div>
     </div>
   </div>
