--- a/web/src/components/mockups/tablet/ipadPro13.module.scss
+++ b/web/src/components/mockups/tablet/ipadPro13.module.scss
@@ -11,16 +11,21 @@
     top: 0;
     width: 100%;
     height: inherit;
-    background: no-repeat url('./ipad-pro-13.png') center;
+    background: no-repeat url('/components/Mockup/Tablet/ipad-pro-13.png') center;
     background-size: contain;
   }
 
+  :global(.mockup-picture) {
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
 
   :global(.mockup-picture > img) {
     padding-top: 6%;
+    padding-bottom: 6%;
     padding-left: 6.5%;
     padding-right: 6.5%;
-    padding-bottom: 6%;
     object-fit: contain;
   }
 }
