Feat: Added IphoneX Mockup, added new breakpoint 'llarge' and fixed breakpoint edge case being skipped for a exact dimension

--- a/web/src/styles/_breakpoints.scss
+++ b/web/src/styles/_breakpoints.scss
@@ -16,7 +16,7 @@
     $breakpoint-value: map-get($breakpoints, $breakpoint);
 
     @if $direction == max {
-      @media (max-width: ($breakpoint-value - 1)) {
+      @media (max-width: ($breakpoint-value)) {
         @content;
       }
     } @else if $direction == min {
