Style: Expand browser-mockup size

--- a/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
+++ b/web/src/pages/projects/portinari-chilk/portinari-gallery.astro
@@ -25,12 +25,11 @@
       </div>
     </div>
   </div>
-  <div class="page h70">
+  <div class="page h50">
     <figure class="mockup">
       <div class="browser-mockup with-url">
-        <img src="/images/portinari/admin.png" alt="Administrator screen" />
+        <img src="/images/portinari/admin.png" alt="Administration screen" />
       </div>
-        <figcaption class="text2">Administration Screen</figcaption>
     </figure>
   </div>
 </div>
