--- a/web/src/styles/_base.scss
+++ b/web/src/styles/_base.scss
@@ -1,8 +1,8 @@
-@use "variables" as *;
-@use "./helpers" as h;
-@use "./breakpoints" as bp;
-@use "./grids" as grids;
-@use "./colorscheme" as colors;
+@use 'variables' as *;
+@use './helpers' as h;
+@use './breakpoints' as bp;
+@use './grids' as grids;
+@use './colorscheme' as colors;
 
 @import url('https://rsms.me/inter/inter.css');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
