--- a/web/src/pages/experiments/ToyRobot/playground.module.scss
+++ b/web/src/pages/experiments/ToyRobot/playground.module.scss
@@ -45,6 +45,7 @@
   background-color: var(--surface2);
 }
 .toolbarButton {
+  all: unset;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,15 +53,15 @@
   border: 0;
   padding: 0.5em;
   background-color: var(--nice);
-  &:hover {
+  &:hover,
+  &:focus {
     cursor: pointer;
-    background-color: var(--brand);
+    box-shadow: inset 0 0 0 2px var(--surface1);
   }
-
   /** Variants */
-  &:global([data-modifier='active']) {
+  &:global([data-state='on']) {
     position: relative;
-    box-shadow: 0 0 0 2px var(--brand);
+    background-color: var(--brand);
   }
 }
 
