--- a/web/src/layouts/Project/Project2Column.astro
+++ b/web/src/layouts/Project/Project2Column.astro
@@ -27,10 +27,9 @@ if(galleryAddress) {
 
   galleryHTML = readFileSync(galleryAddressFullPath).toString();
 }
-
 ---
 
-<Project content={page.content}>
+<Project content={page}>
   <div class="two-columns">
     <section class="content pad8 left">
       {contentHtml}
