--- a/web/src/components/mockups/Phone/IphoneX.module.scss
+++ b/web/src/components/mockups/Phone/IphoneX.module.scss
@@ -1,4 +1,4 @@
-@use "src/styles/breakpoints" as bp;
+@use 'src/styles/breakpoints' as bp;
 
 .iphoneX {
   position: relative;
@@ -24,52 +24,53 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   @include bp.breakpoint(large, min) {
     :global(.mockup-picture > img) {
-      padding-top: 5%;
-      padding-bottom: 5%;
-      padding-left: 26%;
-      padding-right: 26%;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      padding-left: 20%;
+      padding-right: 20%;
     }
   }
 
-  @include bp.breakpoint(large, max) {
-    :global(.mockup-picture > img) {
-      padding-top: 5%;
-      padding-left: 23%;
-      padding-right: 23%;
-      padding-bottom: 5%;
+  @include bp.breakpoint(medium, min) {
+    @include bp.breakpoint(large, max) {
+      :global(.mockup-picture > img) {
+        padding-top: 35px;
+        padding-bottom: 35px;
+        padding-left: 20%;
+        padding-right: 20%;
+      }
     }
   }
 
   @include bp.breakpoint(medium, max) {
     :global(.mockup-picture > img) {
-      padding-top: 14%;
-      padding-bottom: 14%;
-      padding-left: 7%;
-      padding-right: 5%;
+      padding-top: 35px;
+      padding-bottom: 35px;
+      padding-left: 20%;
+      padding-right: 20%;
     }
   }
-
 
   @include bp.breakpoint(small, max) {
     :global(.mockup-picture > img) {
-      padding-top: 10vh;
-      padding-bottom: 10vh;
-      padding-left: 7%;
-      padding-right: 5%;
+      padding-top: 35px;
+      padding-bottom: 35px;
+      padding-left: 10%;
+      padding-right: 10%;
     }
   }
 
-  @include bp.breakpoint(300px, max) {
-    :global(.mockup-picture > img) {
-      padding-top: 14vh;
-      padding-bottom: 14vh;
-      padding-left: 7%;
-      padding-right: 5%;
-    }
-  }
+  // @include bp.breakpoint(300px, max) {
+  //   :global(.mockup-picture > img) {
+  //     padding-top: 14vh;
+  //     padding-bottom: 14vh;
+  //     padding-left: 7%;
+  //     padding-right: 5%;
+  //   }
+  // }
 }
