--- a/web/src/components/Layout/Layout.astro
+++ b/web/src/components/Layout/Layout.astro
@@ -21,15 +21,17 @@
 }
 
 .header {
-  position: absolute;
+  position: sticky;
   height: var(--headerH);
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
 }
 
 .main {
   display: block;
+  transform: translateY(calc( var(--headerH) * -1) );
 }
 
 .footer {
