--- a/web/src/layouts/home.astro
+++ b/web/src/layouts/home.astro
@@ -81,14 +81,17 @@ function applyPostProcess( page:Page ) {
     </section>
 
     <section class="digital-garden">
-      <h2 class="title1 pad4-y">🌻 Digital Garden</h2>
+      <h2 class="title1 pad4-y">
+        <img src="/pictures/spectabrite6.png" height="76px" />
+       Digital Garden
+      </h2>
       <GardenList
         items={gardenItems}
         TitleHeadingLevel={HeadingLevel.h3}
         variant={GardenListVariant.WITH_SUBTITLE} />
       <div class="pad4"/>
     </section>
-    <RubberBall client:idle />
+    <RubberBall client:media={'(min-width: 426px), (prefers-reduced-motion: reduce)'} />
   </div>
 </BaseLayout>
 
@@ -161,13 +164,14 @@ $fold: 90vh;
     position: absolute;
     isolation: isolate;
     content: ' ';
-    background: url('/pictures/Dieffenbachia robusta.png') no-repeat;
+    // background: url('/pictures/Dieffenbachia robusta.png') no-repeat;
+    background: url('/pictures/Philodentrum.png') no-repeat;
     background-position: center bottom;
 
     @include bp.breakpoint(medium, min) {
       /** Occupy left part of screen */
       background-size: contain;
-      bottom: 0;
+      bottom: -5vh;
       left: -2.5%;
       width: 55%;
       height: clamp(400px, 100vh, 800px);
@@ -177,7 +181,7 @@ $fold: 90vh;
       /** Occupy background */
       opacity: 1;
       background-size: cover;
-      bottom: 0;
+      bottom: -5vh;
       left: 0%;
       width: 100%;
       height: clamp(400px, 100vh, 800px);
@@ -189,6 +193,7 @@ $fold: 90vh;
 
 .projects {
   z-index: 1;
+  background-color: var(--surface3);
 
   @include bp.breakpoint(medium, min) {
     padding: 2em 4em;
